--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,9 @@
     <li class="nav-item">
       <a routerLink="profesor" routerLinkActive="active" class="nav-link">Lista de Profesores</a>
     </li>
-    <li class="nav-item">
+    <!-- <li class="nav-item">
       <a routerLink="adicionar_profesor" routerLinkActive="active" class="nav-link">Registrar Profesor</a>
-    </li>
+    </li> -->
   </ul>
 </nav>
 <h1 class="text-center">{{title}}</h1>
