--- a/src/app/component/lista-profesores/lista-profesores.component.html
+++ b/src/app/component/lista-profesores/lista-profesores.component.html
@@ -1,4 +1,12 @@
-<h2>Lista de Profesores</h2>
+
+<div class="row justify-content-between">
+    <div class="col-4">
+        <h2>Lista de Profesores</h2> 
+    </div>
+    <div class="col-2">
+     <button (click) = "adicionar_profesor()" class="btn btn-success">Adicionar</button>
+    </div>
+  </div>
 <table class="table table-striped">
     <thead class="table-dark">
         <tr>
@@ -6,19 +14,26 @@
             <th>Apellido</th>
             <th>Asignatura</th>
             <th>Universidad</th>
-            <th>Acciones</th>
+            <th>Edad</th>
+            <th></th>
         </tr>
     </thead>
     <tbody>
+        <div *ngIf="profesores==null">
+            <h2>
+                No hay profesores registrados!!
+            </h2>
+        </div>
         <tr *ngFor="let profesor of profesores">
             <td>{{profesor.nombre}}</td>
             <td>{{profesor.apellido}}</td>
             <td>{{profesor.asignatura}}</td>
             <td>{{profesor.universidad}}</td>
+            <td>{{profesor.edad}}</td>
             <td>
-                <button (click)="modificarProfesor(profesor.id)" class="btn btn-info">Modificar</button>
-                <button (click)="eliminarProfesor(profesor.id)" class="btn btn-danger" style="margin-left: 5px;">Eliminar</button>
-                <button (click)="detallesProfesor(profesor.id)" class="btn btn-success" style="margin-left: 5px;">Detalles</button>
+                <button (click)="modificarProfesor(profesor.id)" class="btn btn-info btn-sm">Modificar</button>
+                <button (click)="eliminarProfesor(profesor.id)" class="btn btn-danger btn-sm" style="margin-left: 5px;">Eliminar</button>
+                <button (click)="detallesProfesor(profesor.id)" class="btn btn-primary btn-sm" style="margin-left: 5px;">Detalles</button>
 
             </td>
             
