--- a/src/app/component/profesor-detalles/profesor-detalles.component.html
+++ b/src/app/component/profesor-detalles/profesor-detalles.component.html
@@ -15,4 +15,7 @@
     <div>
         <label for=""><b>UNIVERSIDAD: </b>{{profesor.universidad}}</label>
     </div>
+    <div>
+        <label for=""><b>EDAD: </b>{{profesor.edad}}</label>
+    </div>
 </div>
